@@ -1,16 +1,8 @@
-toolbar[type="menubar"] {
-  -moz-binding: url("chrome://globalmenu/content/overrides.xml#menutoolbar") ! important;
-}
-
-menubar {
-  -moz-binding: url("chrome://globalmenu/content/overrides.xml#menubar") ! important;
-}
-
-menubar.menubar-displayed-in-unity:not(.menubar-display-in-window) {
+window[shellshowingmenubar="true"] menubar {
   display: none ! important;
 }
 
-toolbar.menubar-displayed-in-unity:not([customizing="true"]) {
+window[shellshowingmenubar="true"] toolbar:not([customizing="true"]) {
   min-height: 0 !important;
   border: 0 !important;
 }
